Fixed issue where virtual table header had gap above it

--- a/rail_national/static/style.css
+++ b/rail_national/static/style.css
@@ -91,7 +91,13 @@ table.schedule {
     table-layout: auto;
 }
 
-table.schedule td, table.schedule th {
+table.schedule th {
+    border: 1px solid #ddd;
+    border-top: 0px;
+    padding: 8px;
+}
+
+table.schedule td {
     border: 1px solid #ddd;
     padding: 8px;
 }
